tests/k8s_test_setup/templates/yaml/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-http-<ID>
  namespace: <NAMESPACE>
spec:
  rules:
  - host: jupyterhub-<ID>.<NAMESPACE>.svc
    http:
      paths:
      - backend:
          service:
            name: jupyterhub-<ID>
            port:
              number: 80
        path: /
        pathType: Prefix
