tests/k8s_test_setup/templates/yaml/ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  name: ingress-https-<ID>
  namespace: <NAMESPACE>
spec:
  rules:
  - host: unity-<ID>.gitlab.svc
    http:
      paths:
      - backend:
          service:
            name: unity-<ID>
            port:
              number: 443
        path: /
        pathType: Prefix
  - host: unicore-<ID>.gitlab.svc
    http:
      paths:
      - backend:
          service:
            name: unicore-<ID>
            port:
              number: 443
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - unity-<ID>.gitlab.svc
    secretName: tls-unity-<ID>
  - hosts:
    - unicore-<ID>.gitlab.svc
    secretName: tls-gateway-<ID>
