tests/k8s_test_setup/templates/yaml/jupyterhub.yaml
apiVersion:  v1
kind: Service
metadata:
  name: jupyterhub-<ID>
  namespace: <NAMESPACE>
spec:
  selector:
    app: jupyterhub-<ID>
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyterhub-<ID>
  namespace: <NAMESPACE>
spec:
  selector:
    matchLabels:
      app: jupyterhub-<ID>
  template:
    metadata:
      labels:
        app: jupyterhub-<ID>
    spec:
      securityContext:
        fsGroup: 100
        runAsUser: 0
      imagePullSecrets:
      - name: gitlab-registry
      containers:
      - image: registry.jsc.fz-juelich.de/jupyterjsc/k8s/images/jupyterhub-relaunch:<JUPYTERHUB_VERSION>
        imagePullPolicy: Always
        args: ["-f", "/home/jupyterhub/jupyterhub_config.py"]
        name: main
        env:
        - name: SQL_DATABASE
          value: "/tmp/shared-data/jupyterhub.sqlite"
        - name: JUPYTERHUB_CRYPT_KEY
          value: "06e35ed347ec42859d52198b1773af86"
        - name: PYTHONPATH
          value: "/src/jupyterhub-patched:/src/jupyterhub-custom"
        - name: RESERVATIONS_PATH
          value: "/home/jupyterhub/reservations.json"
        - name: MAINTENANCE_PATH
          value: "/home/jupyterhub/maintenance.json"
        - name: STATIC_FILES_SRC
          value: "/home/jupyterhub/jupyterhub-static/static/default"
        - name: STATIC_FILES_DEST
          value: "/home/jupyterhub/jupyterhub-static/static/<JUPYTERHUB_ALT_NAME>"
        - name: TEMPLATE_FILES_SRC
          value: "/home/jupyterhub/jupyterhub-static/templates/default"
        - name: TEMPLATE_FILES_DEST
          value: "/home/jupyterhub/jupyterhub-static/templates/<JUPYTERHUB_ALT_NAME>"
        - name: UNICOREMGR_AUTHENTICATION_TOKEN
          valueFrom:
            secretKeyRef:
              name: unicoremgr-drf-<ID>
              key: JUPYTERHUB_USER_BASIC
              optional: false
        - name: TUNNEL_AUTHENTICATION_TOKEN
          valueFrom:
            secretKeyRef:
              name: tunnel-drf-<ID>
              key: JUPYTERHUB_USER_BASIC
              optional: false
        - name: K8SMGRHDFCLOUD_AUTHENTICATION_TOKEN
          valueFrom:
            secretKeyRef:
              name: k8smgr-drf-<ID>
              key: JUPYTERHUB_USER_BASIC
              optional: false
        - name: TUNNEL_DEPLOYMENT_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        volumeMounts:
        - name: shared-data
          mountPath: /tmp/shared-data
        - name: files
          mountPath: /home/jupyterhub/.ssh/authorized_keys
          subPath: authorized_keys
        - name: files
          mountPath: /home/jupyterhub/jupyterhub_custom_config.json
          subPath: jupyterhub_custom_config.json
        - name: files
          mountPath: /home/jupyterhub/jupyterhub_config.py
          subPath: jupyterhub_config.py
        - name: files
          mountPath: /home/jupyterhub/reservations.json
          subPath: reservations.json
        - name: files
          mountPath: /home/jupyterhub/maintenance.json
          subPath: maintenance.json
        - name: certs
          mountPath: /home/jupyterhub/ca-root.pem
          subPath: ca-root.pem
      - image: python:3.9-alpine3.14
        name: cleanup-sql
        imagePullPolicy: Always
        command: ["/bin/sh"]
        args:
        - -c
        - >-
            pip install requests &&
            python3 -u /tmp/cleanup_sql.py
        env:
        - name: SQL_DATABASE
          value: "/tmp/shared-data/jupyterhub.sqlite"
        - name: SLEEP
          value: "30"
        - name: UNICOREMGR_AUTHENTICATION_TOKEN
          valueFrom:
            secretKeyRef:
              name: unicoremgr-drf-<ID>
              key: JUPYTERHUB_USER_BASIC
              optional: false
        - name: K8SMGRHDFCLOUD_AUTHENTICATION_TOKEN
          valueFrom:
            secretKeyRef:
              name: k8smgr-drf-<ID>
              key: JUPYTERHUB_USER_BASIC
              optional: false
        volumeMounts:
        - name: shared-data
          mountPath: /tmp/shared-data
        - name: files
          mountPath: /home/jupyterhub/jupyterhub_custom_config.json
          subPath: jupyterhub_custom_config.json
        - name: files
          mountPath: /tmp/cleanup_sql.py
          subPath: cleanup_sql.py
        - name: certs
          mountPath: /home/jupyterhub/ca-root.pem
          subPath: ca-root.pem
      volumes:
      - name: shared-data
        emptyDir: {}
      - name: files
        configMap:
          defaultMode: 400
          name: jupyterhub-files-<ID>
      - name: certs
        secret:
          defaultMode: 400
          secretName: certs-<ID>
