tests/k8s_test_setup/templates/yaml/proxy-public.yaml
apiVersion:  v1
kind: Service
metadata:
  name: proxy-public-<ID>
  namespace: <NAMESPACE>
spec:
  selector:
    app: tunnel-<ID>
  type: ClusterIP
  ports:
    - name: forwarded
      port: <JUPYTERHUB_PORT>
      protocol: TCP
      targetPort: <JUPYTERHUB_PORT>
