tests/k8s_test_setup/templates/yaml/unity.yaml
apiVersion:  v1
kind: Service
metadata:
  name: unity-<ID>
  namespace: <NAMESPACE>
spec:
  selector:
    app: unity-<ID>
  type: ClusterIP
  ports:
    - name: ssl
      port: 443
      protocol: TCP
      targetPort: 2443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unity-<ID>
  namespace: <NAMESPACE>
spec:
  selector:
    matchLabels:
      app: unity-<ID>
  template:
    metadata:
      labels:
        app: unity-<ID>
    spec:
      containers:
      - env:
        - name: ADVERTISED_HOST
          value: unity-<ID>.<NAMESPACE>.svc
        - name: JHUB_CALLBACK_URLS_AS_LIST
          value: '["http://jupyterhub-<ID>.<NAMESPACE>.svc/hub/oauth_callback", "https://jupyterhub-<ID>.<NAMESPACE>.svc/hub/oauth_callback", "http://localhost:8000/hub/oauth_callback", "http://jupyterhub.gitlab.svc:8000/hub/oauth_callback"]'
        - name: DEBUG
          value: "true"
        image: registry.jsc.fz-juelich.de/jupyterjsc/k8s/images/unity-test-server:<UNITY_VERSION>
        imagePullPolicy: Always
        name: unity-<ID>
        volumeMounts:
        - name: certs
          mountPath: /opt/unity/pki/ca-root.pem
          subPath: ca-root.pem
        - name: certs
          mountPath: /opt/unity/pki/unity-test-server.key
          subPath: unity.key
        - name: certs
          mountPath: /opt/unity/pki/unity-test-server.crt
          subPath: unity.crt
        - name: certs
          mountPath: /opt/unity/pki/demoKeystore.p12
          subPath: unity.p12
      volumes:
      - name: certs
        secret:
          defaultMode: 400
          secretName: certs-<ID>
